make radar labels more explicit

--- a/body.tex
+++ b/body.tex
@@ -332,7 +332,7 @@ short\_exp: Covering the sky with short exposures. Note this may no longer be fe
 
 smc\_movie: Continuous observations of the SMC. This was only 2 nights on 15s exposures in g for 2780 visits. 
 
-twilight\_neo:  Using short (1s) exposures in twilight to look for NEOs by pointing at high airmass in the direction of the sun. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. There is little to no gain in the fraction of NEOs recovered with these simulations. Need to test with a population of objects interior to Venus to see if there is actually a science case for these observations.  We have also run a twilight neo survey with 15s exposures in v2.1 and find similar results. The v2.1 simulations recover 0.2-1\% of H=20 Vatiras objects. The 1s sims recover 0.5-3.5\% of H=20 Vatiras objects.
+twilight\_neo:  Using short (1s) exposures in twilight to look for NEOs by pointing at high airmass in the direction of the sun. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. There is little to no gain in the fraction of NEOs recovered with these simulations. We have also run a twilight neo survey with 15s exposures in v2.1 and find similar results. The v2.1 simulations recover 0.2-1\% of H=20 Vatiras objects. The 1s sims recover 0.5-3.5\% of H=20 Vatiras objects.--xxx maybe make a plot showing Vatiras performance.
 
 virgo\_cluster:  Adding the Virgo cluster to the WFD footprint. This was such a minor change that we adopted it into the v2.1 baseline.
 
